--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "jsdoc-baseline": "https://github.com/hegemonic/baseline/tarball/master",
         "mongodb": "^3.6.6"
     }
 }
